fix: Align main content to the top on pages with less content.

--- a/assets/css/critical.css
+++ b/assets/css/critical.css
@@ -123,7 +123,7 @@ header {
 }
 
 main {
-  grid-template-rows: minmax(0.5rem, 1fr) auto minmax(0.5rem, 1fr);
+  grid-template-rows: 0.5rem auto 0.5rem;
   min-height: calc(100vh - 9rem);
 }
 
